Send mail events via API call, and then to mailer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "hostinger/hostinger-sdk-php",
+  "version": "1.0.1",
   "description": "Cpanel API",
   "require": {
     "ext-curl": "*",
