--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,8 @@
     "ext-json": "*"
   },
   "autoload": {
-    "psr-0": {
-      "HostingerApi": "",
-      "HostingerApiException": ""
+    "psr-4": {
+      "Hostinger\\HostingerApi\\": ""
     }
   }
 }
